cms/package/skin/src/main/webapp/screen-console.css
/* Console CSS */
/* ================================================ */
body{padding: 15px;}
.hippo-root{font-size: 12px}
.hippo-console{padding: 5px;}
.hippo-console tr td{vertical-align: top}
.hippo-body-back-hack{background: white; position: absolute; top: 0px; left: 0px; width: 100%; height: 150px; z-index: -9999}
.hippo-console-menu-advanced{position: absolute; top: 0px; right: 150px;}
.hippo-console-tree-add {position: absolute; top: 41px; left: 25px;}
.hippo-console-tree-add a{cursor: pointer}
.hippo-console-save{position: absolute; top: 39px; right: 25px;}
.hippo-console-tree-actions {width: 333px; height: 18px; position: absolute; top: 72px; background: white; left: 21px; border-bottom: 1px solid #666666; padding: 3px;}
.hippo-console-tree-sorter {position: absolute; left: 20px; top: 71px; background: white; width: 461px; padding :2px; border-bottom: 1px solid #666666}
.hippo-console-tree-sorter li{float: right}
.hippo-console-breadcrumbs{font-weight: normal; background: #32629b; padding-top: 10px; padding-bottom: 10px; padding-left: 576px; margin-top: 10px; height: 21px;}

.hippo-console-editor{overflow: auto; height: 900px;}

.hippo-console-tree .hippo-tree{overflow: auto; height: 900px; padding-bottom: 30px; font-size: 13px; width: 465px; padding-top: 24px;}

/* Styling for tree in Dialog */
.hippo-window .hippo-console-tree .hippo-tree{ height: 250px; width: 500px; padding-top: 0px; padding-bottom: 5px; border-bottom: 1px solid #e3e3e3;}
.hippo-window label { display: block; }

.hippo-window .hippo-console-tree { float: left; width: 500px; border-right: 1px solid #e3e3e3; }
.hippo-window .window-details { width:450px; float: left; padding-top: 10px; padding-left: 10px; clear:left}

.hippo-console-tree .wicket-tree a{color: #666666}
.hippo-console-tree .wicket-tree a:hover{color: #32629b}
.hippo-console .wicket-tree *{font-family: monospace}
.hippo-console .wicket-tree div.row-selected span {font-weight: normal}

.hippo-tree .wicket-tree span.plus, 
.hippo-tree .wicket-tree span.minus {background-image: url("images/tree-console-icons.png"); width: 14px;}

.hippo-tree .wicket-tree span.junction, 
.hippo-tree .wicket-tree span.junction-last, 
.hippo-tree .wicket-tree span.corner, 
.hippo-tree .wicket-tree span.indent-line,
.hippo-tree .wicket-tree span.indent-blank {background-image: url("images/tree-console-icons.png"); width: 18px;} 

.hippo-console-tree .hippo-tree .wicket-tree span.indent-blank{background: transparent}
.hippo-console-tree .hippo-tree div.wicket-tree div.row, .hippo-tree div.wicket-tree div.row-selected{padding-top: 0px; padding-bottom: 0px}

.hippo-console-menu-advanced {padding: 10px;}
.hippo-console-menu-advanced li{float: left; margin-left: 10px; font-size: 11px;}
.hippo-console-menu-advanced li a:hover{text-decoration: underline}

.hippo-console-tree-add-property{margin-left: 9px;}

.hippo-console-tree-add li{float: left; margin-right: 5px;}

.hippo-console-tree-add .hippo-console-tree-add-delete{margin-right: 72px;}
.hippo-console-tree-sorter li span em, .hippo-console-tree-sorter a, .hippo-console-save a, .hippo-console-tree-add a {padding: 2px; color: white; border: 1px solid white; font-weight: bold; font-size: 11px; display: block; float: left; background: #4587d6}
.hippo-console-tree-sorter li span em{padding:2px; border-color: #cccccc; background: #f2f2f2}
.hippo-console-tree-sorter a:hover, .hippo-console-save a:hover, .hippo-console-tree-add a:hover{color: white; background: #32629b;}
.hippo-console-tree-add{clear: left; margin-bottom: 25px;}
.hippo-console-tree-add  li span {display: block; float: left; padding: 2px; }
.hippo-console-tree-add  li span em{font-weight: bold; color: white; font-style: normal} 
.hippo-console-tree-add-delete a:hover{background: red;}

.hippo-console-tree .hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
.hippo-console-tree .hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
  background: transparent; 
}

.hippo-console-tree .hippo-tree-dropdown-icon:hover {background-position: 0px 0px;}
 

.hippo-console-tree-sorter li span em, .hippo-console-tree-sorter a{padding-left: 25px; padding-right: 25px; background: #abd5ff}

.hippo-console-menu{}
.hippo-console tr td.hippo-global-align-bottom{vertical-align: bottom}
.hippo-console-menu button{text-align: center; font-size: 12px; font-weight: bold;}
.hippo-console-logout{position: absolute; right: 20px; top: 10px; font-size: 11px}
.hippo-console-logout span.name{font-weight: bold; text-transform: capitalize}
.hippo-console-logout li{display: inline}
.hippo-console-check{position: absolute; left: 20px; top: 10px; font-size: 11px}
.hippo-console-check li{display: inline}
.hippo-console-leftpanel{width: 465px; border: 1px solid #666666;}
.hippo-console-rightpanel{border: 1px solid #666666;}


.hippo-console-breadcrumbs strong span{font-weight: normal; color: white; font-size: 15px; font-family: arial, helvetica, sans-serif; line-height: 20px;}
.hippo-console-rightpanel{}

.hippo-console-warning{background: #ee3a42; color: white; padding: 10px; border: 4px solid #b3001b;  margin-bottom: 15px; height: 24px; margin-top: 15px; margin-bottom: 15px; }
.hippo-console-warning p a{font-weight: bold; color: #b3001b}
.hippo-console-warning p {float: left;}

.hippo-console-save li.hippo-console-menu-actions-save {float: right;}
.hippo-console-save li.hippo-console-menu-actions-reset {float: right;}
.hippo-console-save li.hippo-console-menu-actions-save a{padding: 5px; margin-right: 10px}
.hippo-console-save li.hippo-console-menu-actions-save a:hover{ background: green;}
.hippo-console-save li.hippo-console-menu-actions-reset a{padding: 5px}
.hippo-console-save li.hippo-console-menu-actions-reset a:hover{background: red;}



.hippo-console-editor{padding: 20px;}
.hippo-console-editor *{font-size: 14px; margin-bottom: 4px; margin-top: 4px;}
.hippo-console-editor strong{color:#666666}
.hippo-console-editor sup a{color:#32629b}

.hippo-tree-dropdown-icon { background-image: none; }
.hippo-tree div.wicket-tree div.row{background-image: none; }
.hippo-tree div.wicket-tree div.row-selected {background-image: none;}
.hippo-tree div.wicket-tree div.row-selected a {font-weight: normal; color: black;}


.hippo-projectexport-tree .hippo-tree {overflow: scroll; height: 305px; margin: 20px 20px 20px 20px; padding: 4px 4px 4px 4px; border-width: 2px; border-style: solid; font-size: 13px; width: 780px; }
.hippo-projectexport-tree .wicket-tree a{color: #666666}
.hippo-projectexport-tree .wicket-tree a:hover{color: #32629b}
.hippo-projectexport-tree .hippo-tree .wicket-tree span.indent-blank{background: transparent}
.hippo-projectexport-tree .hippo-tree div.wicket-tree div.row, .hippo-tree div.wicket-tree div.row-selected{padding-top: 0px; padding-bottom: 0px}
.hippo-projectexport-tree .hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
.hippo-projectexport-tree .hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
  background: transparent; 
}
.hippo-projectexport-tree .hippo-tree-dropdown-icon:hover {background-position: 0px 0px;}

